Fixed CTA in nav on mobile

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -99,10 +99,8 @@
     
     }
 
-    
-    #default-contact-button {
-        display: none;
-    }
+
+
 
     .social-icons {
 
